<resources>

    <string name="app_name">TablaDeAnuncios</string>

    <!-- Drawer menu -->
    <string name="ad_cat1">Объявления</string>
    <string name="ad_my_ads">Мои объявления</string>
    <string name="ad_car">Автомобили</string>
    <string name="ad_pc">Компьютеры</string>
    <string name="ad_smartphone">Смартфоны</string>
    <string name="ad_dm">Бытовая техника</string>
    <string name="ad_cat2">Аккаунт</string>
    <string name="ad_sign_up">Регистрация</string>
    <string name="ad_sign_in">Вход</string>
    <string name="ad_sign_out">Выход</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="not_reg">Войдите или зарегистрируйтесь</string>
    <!-- Sign Dialog -->
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="sing_up_action">Зарегистрироваться</string>
    <string name="sing_in_action">Войти</string>
    <string name="forget_password">Забыли пароль?</string>
    <string name="sign_up_error">Не удалось зарегистрироваться</string>
    <string name="sign_in_error">Не удалось войти</string>
    <string name="send_verification_error">Не удалось отправить email для подтверждения</string>
    <string name="send_verification_done">Ссылка для подтверждения аккаунта была отправлена на указанную при регистрации почту</string>
    <string name="email_reset_password_was_send">Ссылка для подтверждения сброса пароля была отправлена на указанную при регистрации почту</string>
    <string name="email_reset_password_missing">Для восстановления пароля введите указанный при регистрации e-mail</string>
    <string name="email_reset_password_error">Введен неправильный e-mail. Для восстановления пароля введите указанный при регистрации e-mail</string>
</resources>